# google-nest-fetcher

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  README.md  gazelle_python.yaml  multitool.lock.json  package-lock.json  package.json  pnpm-lock.yaml  requirements.in  requirements.txt
scripts/: BUILD.bazel  blob_motion.py  concatenate_videos.py  get_master_token.py  list_cameras.py  list_devices.py  mice_detector.py  mouse_tracker.py  retrieve_camera_footage.py  train_mice.py  visualize_mice_paths.py  yolo.py
