load("@aspect_rules_py//py:defs.bzl", "py_binary")

# gazelle:python_generation_mode file
# gazelle:python_binary_naming_convention $package_name$

py_binary(
    name = "get_master_token",
    srcs = ["get_master_token.py"],
    visibility = ["//:__subpackages__"],
    deps = ["@pip//gpsoauth"],
)

py_binary(
    name = "list_cameras",
    srcs = ["list_cameras.py"],
    visibility = ["//:__subpackages__"],
    deps = ["@pip//glocaltokens"],
)

py_binary(
    name = "retrieve_camera_footage",
    srcs = ["retrieve_camera_footage.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//glocaltokens",
        "@pip//gpsoauth",
        "@pip//requests",
    ],
)
